namespaces/live-1.cloud-platform.service.justice.gov.uk/check-financial-eligibility-production/05-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: check-financial-eligibility-production-ingress
  annotations:
    kubernetes.io/ingress.class: "modsec01"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecAction \
      "id:900000,\
        phase:1,\
        nolog,\
        pass,\
        t:none,\
        setvar:tx.paranoia_level=2"
spec:
  tls:
  - hosts:
    - check-financial-eligibility.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: check-financial-eligibility.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: check-financial-eligibility-production
          servicePort: 8080
